styling fix - found feed was too long

--- a/docs/code/stylesheet.css
+++ b/docs/code/stylesheet.css
@@ -74,7 +74,7 @@ body
     top: 21%;
     right: 3%;
     width: 15%;
-    height: 71%;        
+    height: 70%;        
     /* Added height property so hopefully should scroll vertical overdflow*/
     overflow-y: scroll;
 }
